# OV

./: .gitignore  CLAUDE.md  cloth_nodes.txt  pipeline.md
GLM-V/: README.md  README_zh.md  requirements.txt
GLM-V/inference/: batch_attribute_recognition_glm.py  batch_dual_lane_grounding_glm.py  batch_lane_grounding_glm.py  batch_scene_classify_glm.py  html_detector.py  trans_infer_cli.py  trans_infer_gradio.py
ImgProject/: README.md  main.py  pyproject.toml  test.py  utils.py
ImgProject/pipeline/: task5_merge_instance_seg_final_las.py  task5_merge_scene_las_by_suffix.py  task5_prompt_results_to_las.py  task5_scene_instance_seg.py  task5_scene_instance_seg_v1.py  task6_1_gid_lookup.py  task6_1_gid_lookup_gui.py  task6_geometry_utils.py  task6_glm_utils.py  task6_scene_attribute_extract.py  utils.py
ImgProject/pyIMS/: IMS.py  __init__.py
ImgProject/pyIMS/Core/: img2pc.py  instance.py  merge.py  pc2img.py
ImgProject/pyIMS/utils/: analyze.py  bbox.py  io.py  label.py  pc_with_label.py  stations.py  typing.py
ImgProject/ui/: confirm_widget.ui  drawing_pad.ui  main.ui
Qwen3-VL/: run.py  web_demo_mm.py
Qwen3-VL/infer/: batch_lane_grounding.py  batch_scene_classify.py  lane_center_direction.py  lane_grounding.py
gemma4/: infer.py
gemma4/gemma-4-E4B-it/: .msc  .mv  README.md
sam3/preprocess/: README.md  agent_lane_arrow_infer.py  batch_scene_sam_from_vlm.py  infer_cross_image_retrieval.py  infer_multi_concept.py  infer_visual_prompt.py  masks.py  pc2img.py  road_topology_slices.py  scene_slice_utils.py  split_las_by_ranges.py  stitch_bev_by_positions.py  (+3 more)
(+8 files in other folders)
